Deployment 0969b513-16af-4421-8de3-29e656ea73d5: Run number 1063

--- a/src/WRA.Umbraco.Web/Views/_Layout.cshtml
+++ b/src/WRA.Umbraco.Web/Views/_Layout.cshtml
@@ -14,72 +14,16 @@
     var settings = Umbraco.ContentAtRoot().FirstOrDefault(x => x.ContentType.Alias == "siteSettings");
 
     IPublishedContent home = Umbraco.ContentAtRoot()?.Where(pc => pc.Name == "Home")?.FirstOrDefault();
-    
-    //Model will contain all the data of the current page
-    string metaTitle = Model.HasValue("metaTitle") ? Model.Value<string>("metaTitle") : Model.Name + " | " + settings?.Value("siteName");
-    string metaDescription = Model.HasValue("metaDescription") ? Model.Value<string>("metaDescription") : string.Empty;
-    
-    string logoStyle = string.Empty;
-
-    if (!String.IsNullOrEmpty(settings?.Value<string>("logoWidth")))
-    {
-        logoStyle += $"--logo-width:{settings.Value("logoWidth")}px;";
-    }
-
-    if (!String.IsNullOrEmpty(settings?.Value<string>("mobileLogoWidth")))
-    {
-        logoStyle += $"--logo-mobile-width:{settings.Value("mobileLogoWidth")}px;";
-    }
-
-    if (!String.IsNullOrEmpty(settings?.Value<string>("footerLogoWidth")))
-    {
-        logoStyle += $"--footer-logo-width:{settings.Value("footerLogoWidth")}px;";
-    }
-
-    if (!String.IsNullOrEmpty(settings?.Value<string>("footerLogoMobileWidth")))
-    {
-        logoStyle += $"--footer-logo-mobile-width:{settings.Value("footerLogoMobileWidth")}px;";
-    }
 
     string alertTimestamp = String.Format("{0:Mdyyyyhmmss}", settings?.Value("timestamp"));//convert to string to write a cookie via data attributes
     int alertExpDays = settings?.Value<int>("expirationDays") ?? 0; //strongly typed int for exp dates, though will be converted to string on FE
-
 }
 
 <!doctype html>
 <html lang="en-US">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@metaTitle</title>
-    <meta name="description" content="@metaDescription">
-    @if (Model.HasValue("openGraphImage"))
-    {
-        <meta property="og:image" content="@(Model?.Value<IPublishedContent>("openGraphImage")?.Url(mode:UrlMode.Absolute))">
-    }
-    else if (settings.HasValue("oGImageFallback"))
-    {
-        <meta property="og:image" content="@(settings?.Value<IPublishedContent>("oGImageFallback")?.Url(mode:UrlMode.Absolute))">
-    }
-    <link rel="icon" href="~/favicon.ico" sizes="32x32" />
-    <link rel="icon" href="~/icon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="~/apple-touch-icon.png" />
-    <link rel="manifest" href="~/manifest.webmanifest" />
-    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    @RenderSection("head", required: false)
-    <script src="https://kit.fontawesome.com/ee0cbe98db.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:ital,wght@0,400;0,500;0,600;0,800;1,400;1,500;1,600;1,800&family=Roboto+Serif:ital,opsz,wght@0,8..144,400;1,8..144,400&display=swap" rel="stylesheet">
-    <style> html { @logoStyle } </style>
-    <link href="/css/dist/global.css" rel="stylesheet" asp-append-version="true">
-    @RenderSection("styles", required: false)
-
-
-    @Html.RenderUmbracoFormDependencies(Url)
-    @Html.Raw(settings?.Value("headScripts"))
-
-</head>
+@await Html.PartialAsync("_header")
+@RenderSection("head", required: false)
+@RenderSection("styles", required: false)
 <body class="page-template-@Model.ContentType.Alias page-id-@Model.Id">
 
     @Html.Raw(settings?.Value("bodyOpenScripts"))
@@ -325,254 +269,7 @@
         @RenderBody()
     </main>
 
-    <footer class="site-footer">
-        @{
-            IPublishedContent siteFooterWidget = Model.Value<IPublishedContent>("siteFooterWidget");
-
-            if (siteFooterWidget != null)
-            {
-                <div class="site-footer__widget-area pb-4 pb-lg-7">
-                    <div class="container">
-                        <div class="row gx-5 mt-0 text-center">
-                            @if (siteFooterWidget.ContentType.Alias == "oneColumnSiteFooterWidget")
-                            {
-                                var colorSchemeClasses = "bg-light";
-                                var colorSchemeBtnClasses = "btn-primary";
-                                var colorScheme = siteFooterWidget.Value<string>("colorScheme");
-                                var link = siteFooterWidget.Value<Link>("link");
-
-                                if (colorScheme == "Dark Blue")
-                                {
-                                    colorSchemeClasses = "bg-secondary text-white";
-                                    colorSchemeBtnClasses = "btn-light";
-                                }
-
-                                <div class="col-12 mt-0">
-                                    <div class="site-footer__widget px-6 py-7 @colorSchemeClasses">
-                                        <div class="container container--sm">
-                                            <h2 class="h3">@siteFooterWidget.Value("heading")</h2>
-                                            @if (siteFooterWidget.HasValue("content"))
-                                            {
-                                                @Html.Raw(siteFooterWidget.Value("content"))
-                                            }
-                                            <a class="btn @colorSchemeBtnClasses mt-2" href="@link?.Url" target="@link?.Target">@link?.Name</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            }
-                            else if (siteFooterWidget.ContentType.Alias == "twoColumnSiteFooterWidget")
-                            {
-                                var col1ColorSchemeClasses = "bg-light";
-                                var col1ColorSchemeBtnClasses = "btn-primary";
-                                var col1ColorScheme = siteFooterWidget.Value<string>("col1ColorScheme");
-                                var col2ColorSchemeClasses = "bg-light";
-                                var col2ColorSchemeBtnClasses = "btn-primary";
-                                var col2ColorScheme = siteFooterWidget.Value<string>("col2ColorScheme");
-                                var col1Link = siteFooterWidget.Value<Link>("col1Link");
-                                var col2Link = siteFooterWidget.Value<Link>("col2Link");
-
-                                if (col1ColorScheme == "Dark Blue")
-                                {
-                                    col1ColorSchemeClasses = "bg-secondary text-white";
-                                    col1ColorSchemeBtnClasses = "btn-light";
-                                }
-
-                                if (col2ColorScheme == "Dark Blue")
-                                {
-                                    col2ColorSchemeClasses = "bg-secondary text-white";
-                                    col2ColorSchemeBtnClasses = "btn-light";
-                                }
-
-                                <div class="col-12 col-md-6 mt-0 mb-4 mb-lg-0">
-                                    <div class="site-footer__widget px-6 py-7 @col1ColorSchemeClasses">
-                                        <h2 class="h3">@siteFooterWidget.Value("col1Heading")</h2>
-                                        @if (siteFooterWidget.HasValue("col1Content"))
-                                        {
-                                            @Html.Raw(siteFooterWidget.Value("col1Content"))
-                                        }
-                                        <a class="btn @col1ColorSchemeBtnClasses mt-2" href="@col1Link.Url" target="@col1Link.Target">@col1Link.Name</a>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6 mt-0">
-                                    <div class="site-footer__widget px-6 py-7 @col2ColorSchemeClasses">
-                                        <h2 class="h3">@siteFooterWidget.Value("col2Heading")</h2>
-                                        @if (siteFooterWidget.HasValue("col2Content"))
-                                        {
-                                            @Html.Raw(siteFooterWidget.Value("col2Content"))
-                                        }
-                                        <a class="btn @col2ColorSchemeBtnClasses mt-2" href="@col2Link.Url" target="@col2Link.Target">@col2Link.Name</a>
-                                    </div>
-                                </div>
-                            }
-                        </div>
-                    </div>
-                </div>
-            }
-        }
-        <div class="py-7 bg-dark overflow-hidden">
-            <div class="container">
-                <div class="row text-white" style="font-family: Poppins, sans-serif;">
-                    <div class="col-12 col-lg-4 mt-0">
-                        <div class="mb-5">
-                            <h3 class="h4">WRA Headquarters</h3>
-                            <address class="mb-0">
-                                @settings.Value("hqAddress")@(settings.HasValue("hqSuite") ? ", " + settings.Value("hqSuite") : "")<br>
-                                @settings.Value("hqCity"), @settings.Value("hqState") @settings.Value("hqZip")
-                            </address>
-                            @if (settings.HasValue("hqHours"))
-                            {
-                                @settings.Value("hqHours")<br>
-                            }
-                            @if (settings.HasValue("hqPhone"))
-                            {
-                                <a href="tel:@settings.Value("hqPhone")">@settings.Value("hqPhone")</a><br>
-                            }
-                            @if (settings.HasValue("hqPhone2"))
-                            {
-                                <a href="tel:@settings.Value("hqPhone2")">@settings.Value("hqPhone2")</a><br>
-                            }
-                            @if (settings.HasValue("hqEmail"))
-                            {
-                                <a href="mailto:@settings.Value("hqEmail")">@settings.Value("hqEmail")</a>
-                            }
-                        </div>
-                        <div class="mb-5">
-                            <h3 class="h4">WRA Public Affairs Office</h3>
-                            <address class="mb-0">
-                                @settings.Value("paAddress")@(settings.HasValue("paSuite") ? ", " + settings.Value("paSuite") : "")<br>
-                                @settings.Value("paCity"), @settings.Value("paState") @settings.Value("paZip")
-                            </address>
-                            @if (settings.HasValue("paHours"))
-                            {
-                                @settings.Value("paHours")<br>
-                            }
-                            @if (settings.HasValue("paPhone"))
-                            {
-                                <a href="tel:@settings.Value("paPhone")">@settings.Value("paPhone")</a><br>
-                            }
-                            @if (settings.HasValue("paPhone2"))
-                            {
-                                <a href="tel:@settings.Value("paPhone2")">@settings.Value("paPhone2")</a><br>
-                            }
-                            @if (settings.HasValue("paEmail"))
-                            {
-                                <a href="mailto:@settings.Value("paEmail")">@settings.Value("paEmail")</a>
-                            }
-                        </div>
-                    </div>
-                    <div class="col-12 col-lg-4 mt-0">
-                        <div class="mb-5">
-                            @{
-                                var footerLinks = settings.Value<IEnumerable<Link>>("footerNavigation");
-                            
-                                if (footerLinks.Any())
-                                {
-                                    <nav class="mb-2" aria-label="Site footer navigation">
-                                        <ul class="list-unstyled">
-                                            @foreach (var link in footerLinks)
-                                            {
-                                                <li class="pb-3">
-                                                    <a href="@link?.Url" target="@link?.Target">@link?.Name</a>
-                                                </li>
-                                            }
-                                        </ul>
-                                    </nav>
-                                }
-                            }
-                        
-                            <h3 class="h4">Follow Us</h3>
-                            <ul class="d-inline-flex gap-3 list-unstyled">
-                                @if (settings.HasValue("facebook"))
-                                {
-                                    <li>
-                                        <a href="@settings.Value("facebook")" target="_blank">
-                                            <i class="fab fa-facebook-f fa-lg"></i>
-                                            <span class="visually-hidden">Facebook</span>
-                                        </a>
-                                    </li>
-                                }
-                                @if (settings.HasValue("youtube"))
-                                {
-                                    <li>
-                                        <a href="@settings.Value("youtube")" target="_blank">
-                                            <i class="fab fa-youtube fa-lg"></i>
-                                            <span class="visually-hidden">YouTube</span>
-                                        </a>
-                                    </li>
-                                }
-                                @if (settings.HasValue("twitter"))
-                                {
-                                    <li>
-                                        <a href="@settings.Value("twitter")" target="_blank">
-                                            <i class="fa-brands fa-x-twitter fa-lg"></i>
-                                            <span class="visually-hidden">Twitter</span>
-                                        </a>
-                                    </li>
-                                }
-                                @if (settings.HasValue("instagram"))
-                                {
-                                    <li>
-                                        <a href="@settings.Value("instagram")" target="_blank">
-                                            <i class="fab fa-instagram fa-lg"></i>
-                                            <span class="visually-hidden">Instagram</span>
-                                        </a>
-                                    </li>
-                                }
-                                @if (settings.HasValue("linkedin"))
-                                {
-                                    <li>
-                                        <a href="@settings.Value("linkedin")" target="_blank">
-                                            <i class="fab fa-linkedin-in fa-lg"></i>
-                                            <span class="visually-hidden">LinkedIn</span>
-                                        </a>
-                                    </li>
-                                }
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-12 col-lg-4 mt-0">
-                        <h3 class="h4">Legal Hotline</h3>
-                        @if (settings.HasValue("lhNotes"))
-                        {
-                            <p class="my-2">@settings.Value("lhNotes")</p>
-                        }
-                        <a href="tel:@settings.Value("lhPhone")">@settings.Value("lhPhone")</a><br>
-                        @if (settings.HasValue("lhPhone2"))
-                        {
-                            <a href="tel:@settings.Value("lhPhone2")">@settings.Value("lhPhone2")</a><br>
-                        }
-                        @if (settings.HasValue("lhHours"))
-                        {
-                            <p class="my-2">@settings.Value("lhHours")</p>
-                        }
-                    </div>
-                </div>
-                <div class="site-footer__bottom mt-5 pt-3 text-white">
-                    <a class="site-footer__logo mb-3 mb-lg-0" href="/">
-                        <img src="@(settings?.Value<IPublishedContent>("footerLogo")?.Url() ?? string.Empty)" class="w-100" alt="@(settings?.Value<IPublishedContent>("footerLogo")?.Value("altText") ?? string.Empty)" />
-                    </a>
-                    <p class="mb-lg-0">&copy; @DateTime.Now.Year @settings?.Value("siteName"). All Rights Reserved.</p>
-                    @{
-                        var footerUtilityLinks = settings?.Value<IEnumerable<Link>>("footerUtilityNavigation") ?? [];
-
-                        if (footerUtilityLinks != null && footerUtilityLinks.Any())
-                        {
-                            <nav aria-label="Site footer utility navigation">
-                                <ul class="site-footer__utility-links list-unstyled mb-0">
-                                    @foreach (var link in footerUtilityLinks)
-                                    {
-                                        <li>
-                                            <a href="@link?.Url" target="@link?.Target">@link?.Name</a>
-                                        </li>
-                                    }
-                                </ul>
-                            </nav>
-                        }
-                    }
-                </div>
-            </div>
-        </div>
-    </footer>
+    @await Html.PartialAsync("_footer")
 
     @RenderSection("scriptsPre", required: false)
     <script src="https://cdn.jsdelivr.net/npm/@@event-calendar/build@2.6.1/event-calendar.min.js"></script>
