--- a/src/WRA.Umbraco.Web/Views/Partials/Commerce/ProductGroupListItem.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/Commerce/ProductGroupListItem.cshtml
@@ -5,7 +5,7 @@
 <a href="@(Model.Url())" class="block relative bg-gray-600 text-white hover:bg-gray-800">
     @if (Model.Image != null)
     {
-        <img src="@(Model.Image.GetCropUrl(200, 200))" class="w-full h-40 object-cover opacity-50" />
+        <img src="@(Model.Image.GetCropUrl(200, 200))" alt="" class="w-full h-40 object-cover opacity-50" />
     }
     else
     {
