Deployment 94f514cc-05de-4d8c-a1f1-d887f7817470: Run number 1099

--- a/src/WRA.Umbraco.Web/Views/MagazineLanding.cshtml
+++ b/src/WRA.Umbraco.Web/Views/MagazineLanding.cshtml
@@ -3,7 +3,7 @@
 @using Umbraco.Cms.Core.Models.Blocks
 @using System.Text.RegularExpressions;
 @using WRA.Umbraco.Extensions
-@using WRA.Umbraco.Web.Helpers
+@using WRA.Umbraco.Helpers
 
 @{
     Layout = "~/Views/_Layout.cshtml";
