--- a/src/WRA.Umbraco.Web/Views/MultimediaLanding.cshtml
+++ b/src/WRA.Umbraco.Web/Views/MultimediaLanding.cshtml
@@ -2,7 +2,7 @@
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<WRA.Umbraco.Models.MultimediaLanding>
 @using Umbraco.Cms.Core.Models.Blocks
 @using System.Text.RegularExpressions;
-@using WRA.Umbraco.Web.Helpers;
+@using WRA.Umbraco.Helpers;
 @using Microsoft.AspNetCore.Http;
 
 @{
