--- a/src/WRA.Umbraco.Web/Views/ProductsPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/ProductsPage.cshtml
@@ -2,7 +2,7 @@
 @using Umbraco.Cms.Core.Models.Blocks
 @using WRA.Umbraco.Models;
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ProductsPage>
-@using WRA.Umbraco.Web.Helpers
+@using WRA.Umbraco.Helpers
 
 
 @{
