--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/magazineFeatures.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/magazineFeatures.cshtml
@@ -4,7 +4,8 @@
 @using ContentModels = WRA.Umbraco.Models;
 @using System.Linq;
 @using System.Text.RegularExpressions;
-@using WRA.Umbraco.Web.Helpers
+@using WRA.Umbraco.Helpers
+@using WRA.Umbraco.Extensions;
 
 
 @{
